# ruxel-core

./: Cargo.toml  README.md  ruxel.json
.ruxel/: a.rhai  b.rhai  cmds_content.json  config.json  init.rhai  print.rhai  render.rhai
src/: canvas.rs  color.rs  command.rs  config.rs  file.rs  getch.rs  main.rs  position.rs  ruxel.rs  state.rs  tui.rs  unit.rs  view.rs
