[package]
name = "ruxel"
version = "0.1.0"
authors = ["toonnyy8"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rhai = "0.19.10"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# termios = "0.3"
# libc = "0.2.76"