[package]
name = "ruxel-core"
version = "0.1.0"
authors = ["toonnyy8"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
regex = { version =  "1.4.3", default-features = false, features = ["std", "unicode", "perf-cache", "perf-dfa", "perf-inline"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.23.13"
im-rc = "15.0.0"